...
        android:layout_height="wrap_content"
        android:forceHasOverlappingRendering="false"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_notif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="#00111010"
            app:srcCompat="@android:drawable/ic_dialog_email" />
    </LinearLayout>
...
